# .sol_login_sdk

./: .eslintignore  .eslintrc.json  .gitignore  README.md  package.json  plan.md  pnpm-lock.yaml  render.yaml
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .dockerignore  .env.example  Dockerfile  data.db-shm  data.db-wal  package.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: index.js
apps/backend/src/clients/: helius.client.js
apps/backend/src/config/: env.js  logger.js  solana.js
apps/backend/src/db/: database.js  prisma.js
apps/backend/src/middleware/: authenticate.js  errorHandler.js  rateLimit.js  validate.js
apps/backend/src/routes/: auth.js  identity.js  meta.js  proof.js  reputation.js
apps/backend/src/services/: auth.service.js  reputation.service.js  sns.service.js  zk.service.js
apps/demo/: .env.example  index.html  package.json  tailwind.config.js  vercel.json  vite.config.js
apps/demo/scripts/: copy-circuits.mjs
apps/demo/src/: App.css  App.jsx  index.css
apps/demo/src/components/: CodeBlock.jsx  FeatureCard.jsx  Footer.jsx  HeroScene.jsx  HowItWorks.jsx  IdentityBadge.jsx  IdentityCard.jsx  Navbar.jsx  ReputationMeter.jsx  SocialLinks.jsx  SolLoginButton.jsx  WalletPicker.jsx  ZkProofModal.jsx
apps/demo/src/lib/: SmoothScroll.jsx  (+2 more)
docs/: anchor-deploy.md  architecture.md  deployment.md  plan.md  workflows.md
programs/sol-login/: Cargo.toml
programs/sol-login/src/: errors.rs  lib.rs
programs/sol-login/src/instructions/: issue_credential.rs  mod.rs  verify_proof.rs
programs/sol-login/src/state/: mod.rs
(+9 files in other folders)
