[package]
name = "sol-login"
version = "0.1.0"
description = "Solana ZK Identity Verification Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_login"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
